:art: Modificar algunas partes para moverlos a Taller1.md

--- a/problema01.ipynb
+++ b/problema01.ipynb
@@ -111,27 +111,7 @@
    "id": "6c478236",
    "metadata": {},
    "source": [
-    "### ¿Cuál es el número mínimo de los elementos de la serie $1 + 1/2 + 1/4 + 1/8 + ...$ para alacanzar un error absoluto dentro de  $10^{-1}$?\n",
-    "\n",
-    "El mínimo de terminos tal que el error sea menor que $10^{-1} = 0.1$\n",
-    "\n",
-    "- Primer término $( a ):  1$ \n",
-    "- Razón común $( r ):  \\frac{1}{2}$\n",
-    "\n",
-    "La suma $S$ de una serie geométrica infinita:\n",
-    "$S = \\frac{a}{1 - r} = \\frac{1}{1 - \\frac{1}{2}} = 2$\n",
-    "\n",
-    "La suma parcial $S_n$ de los primeros $n$ términos es:\n",
-    "\n",
-    "$S_n = \\sum_{k=0}^{n-1} \\left(\\frac{1}{2}\\right)^k = 2 \\left(1 - \\left(\\frac{1}{2}\\right)^n\\right)$\n",
-    "\n",
-    "El error:\n",
-    "\n",
-    "$\\text{Error} = |S - S_n| = 2 \\left(\\frac{1}{2}\\right)^n = 2^{1 - n}$\n",
-    "\n",
-    "Se necesita que:\n",
-    "\n",
-    "$2^{1 - n} < 0.1$\n"
+    "### ¿Cuál es el número mínimo de los elementos de la serie $1 + 1/2 + 1/4 + 1/8 + ...$ para alacanzar un error absoluto dentro de  $10^{-1}$?"
    ]
   },
   {
@@ -158,14 +138,6 @@
     "n2 = 5\n",
     "error2 = 2**(1 - n2)\n",
     "print(f\"Para n={n2}: Error={error2} (lo cual es < 0.1)\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b27d8fa2",
-   "metadata": {},
-   "source": [
-    "Entonces el mínimo de terminos para que el error sea menor a 0.1 es igual a 5."
    ]
   }
  ],
