:hammer: Modificar el algoritmo 2 para ver el número de comparaciones

--- a/problema02.ipynb
+++ b/problema02.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "40174c9c",
    "metadata": {},
    "outputs": [
@@ -48,23 +48,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_sorted: [1, 2, 3, 4, 5, 8]\n"
+      "V_sorted: [1, 2, 3, 4, 5, 8]\n",
+      "Número de Comparaciones: 15\n"
      ]
     }
    ],
    "source": [
     "v1 = [3, 2, 5, 8, 4, 1] \n",
     "n = len(v1)\n",
-    "\n",
+    "comparisons = 0\n",
     "for i in range(n):\n",
     "    swapped = False\n",
     "    for j in range(1, n - i):\n",
+    "        comparisons += 1\n",
     "        if v1[j] < v1[j - 1]:\n",
     "            v1[j], v1[j - 1] = v1[j - 1], v1[j]\n",
     "            swapped = True\n",
     "    if not swapped:\n",
     "        break\n",
-    "print(\"V_sorted:\", v1)"
+    "print(\"V_sorted:\", v1)\n",
+    "print(\"Número de Comparaciones:\", comparisons)"
    ]
   },
   {
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "62359360",
    "metadata": {},
    "outputs": [
@@ -85,28 +88,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_sorted: [-1, 0, 4, 5, 6, 7]\n"
+      "V_sorted: [-1, 0, 4, 5, 6, 7]\n",
+      "Número de Comparaciones: 5\n"
      ]
     }
    ],
    "source": [
     "v2 = [-1, 0, 4, 5, 6, 7] \n",
     "n = len(v2)\n",
-    "\n",
+    "comparisons = 0\n",
     "for i in range(n):\n",
     "    swapped = False\n",
     "    for j in range(1, n - i):\n",
+    "        comparisons += 1\n",
     "        if v2[j] < v2[j - 1]:\n",
     "            v2[j], v2[j - 1] = v2[j - 1], v2[j]\n",
     "            swapped = True\n",
     "    if not swapped:\n",
     "        break\n",
-    "print(\"V_sorted:\", v2)"
+    "print(\"V_sorted:\", v2)\n",
+    "print(\"Número de Comparaciones:\", comparisons)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "5206dba8",
    "metadata": {},
    "outputs": [
@@ -114,8 +120,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_3: [-34, -145, 60, -18, 42, -139, -177, -123, -149, 136, -72, 135, 23, -60, -130, -54, -51, -172, -49, 59, 64, -119, -123, -69, -143, 87, -37, 44, 94, -93, -51, -121, 75, 60, -50, -50, -52, 118, 90, 0, 137, 120, -37, 16, -165, -52, 44, 9, -200, -161, 29, 31, 136, 63, -112, -74, -120, 2, 54, -111, -70, -121, -178, 49, 31, -73, 82, -133, -114, -28, 138, -84, -182, 145, -180, -51, -92, -191, 101, 86, -187, 25, 30, 73, 68, -193, 138, 85, -198, -161, -75, -138, -88, -118, -9, 57, 82, 98, 104, 128]\n",
-      "V_sorted: [-200, -198, -193, -191, -187, -182, -180, -178, -177, -172, -165, -161, -161, -149, -145, -143, -139, -138, -133, -130, -123, -123, -121, -121, -120, -119, -118, -114, -112, -111, -93, -92, -88, -84, -75, -74, -73, -72, -70, -69, -60, -54, -52, -52, -51, -51, -51, -50, -50, -49, -37, -37, -34, -28, -18, -9, 0, 2, 9, 16, 23, 25, 29, 30, 31, 31, 42, 44, 44, 49, 54, 57, 59, 60, 60, 63, 64, 68, 73, 75, 82, 82, 85, 86, 87, 90, 94, 98, 101, 104, 118, 120, 128, 135, 136, 136, 137, 138, 138, 145]\n"
+      "V_3: [28, 41, -5, -36, 74, 71, -179, 26, 79, -2, -55, 69, -111, 54, 68, -105, -197, 2, 75, -102, -18, 110, -136, 16, -114, -173, 49, -9, -121, -116, 36, 102, 59, -159, 5, -178, 53, -67, 47, -139, 26, 114, 116, -32, -33, -161, -33, 76, -180, 24, 85, -12, 1, 32, 80, 69, 114, 10, -33, 93, 0, 122, 65, 136, -84, 79, 12, -99, -76, -63, -147, 121, 124, -1, -187, -2, -100, 101, -156, -113, -2, -76, 22, -113, -178, -152, 29, -100, -149, 132, -144, 131, -190, -188, -42, 25, 88, -67, 17, 90]\n",
+      "V_sorted: [-197, -190, -188, -187, -180, -179, -178, -178, -173, -161, -159, -156, -152, -149, -147, -144, -139, -136, -121, -116, -114, -113, -113, -111, -105, -102, -100, -100, -99, -84, -76, -76, -67, -67, -63, -55, -42, -36, -33, -33, -33, -32, -18, -12, -9, -5, -2, -2, -2, -1, 0, 1, 2, 5, 10, 12, 16, 17, 22, 24, 25, 26, 26, 28, 29, 32, 36, 41, 47, 49, 53, 54, 59, 65, 68, 69, 69, 71, 74, 75, 76, 79, 79, 80, 85, 88, 90, 93, 101, 102, 110, 114, 114, 116, 121, 122, 124, 131, 132, 136]\n",
+      "Número de Comparaciones: 4922\n"
      ]
     }
    ],
@@ -125,18 +132,72 @@
     "v3 = [random.randint(-200, 145) for _ in range(100)]\n",
     "\n",
     "print(\"V_3:\", v3)\n",
+    "comparisons = 0\n",
     "\n",
     "n = len(v3)\n",
     "\n",
     "for i in range(n):\n",
     "    swapped = False\n",
     "    for j in range(1, n - i):\n",
+    "        comparisons += 1\n",
     "        if v3[j] < v3[j - 1]:\n",
     "            v3[j], v3[j - 1] = v3[j - 1], v3[j]\n",
     "            swapped = True\n",
     "    if not swapped:\n",
     "        break\n",
-    "print(\"V_sorted:\", v3)"
+    "print(\"V_sorted:\", v3)\n",
+    "print(\"Número de Comparaciones:\", comparisons)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f354dcb",
+   "metadata": {},
+   "source": [
+    "Modifique el Algoritmo y determine el número de comparaciones realizadas al ordenar la serie 54321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e48bbb25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#    Modifique el Algoritmo y determine el número de comparaciones realizadas al ordenar la serie 54321\n",
+    "\n",
+    "v4 = [5, 4, 3, 2, 1]\n",
+    "n = len(v4)\n",
+    "comparisons = 0\n",
+    "for i in range(n):\n",
+    "    swapped = False\n",
+    "    for j in range(1, n - i):\n",
+    "        comparisons += 1\n",
+    "        if v4[j] < v4[j - 1]:\n",
+    "            v4[j], v4[j - 1] = v4[j - 1], v4[j]\n",
+    "            swapped = True\n",
+    "    if not swapped:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f8c4cc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V_sorted: [1, 2, 3, 4, 5]\n",
+      "Número de Comparaciones: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"V_sorted:\", v4)\n",
+    "print(\"Número de Comparaciones:\", comparisons)"
    ]
   }
  ],
