:hammer: Añadir el codigo dado por el profe para ver el error abs < 10**-1:

--- a/problema01.ipynb
+++ b/problema01.ipynb
@@ -139,6 +139,48 @@
     "error2 = 2**(1 - n2)\n",
     "print(f\"Para n={n2}: Error={error2} (lo cual es < 0.1)\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "80f6f656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Termino 1: 1.0, suma parcial: 1.0\n",
+      "Termino 2: 0.5, suma parcial: 1.5\n",
+      "Termino 3: 0.25, suma parcial: 1.75\n",
+      "Termino 4: 0.125, suma parcial: 1.875\n",
+      "Termino 5: 0.0625, suma parcial: 1.9375\n",
+      "Suma final: 1.9375, con n=5 terminos, y error absoluto: 0.0625\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_real = 2\n",
+    "S = 0\n",
+    "n = 0\n",
+    "while True:\n",
+    "    i = 1 / (2**n)\n",
+    "    S += i\n",
+    "    n += 1\n",
+    "    print(f\"Termino {n}: {i}, suma parcial: {S}\")\n",
+    "    error_abs = abs(v_real - S)\n",
+    "    if error_abs < 10**-1:\n",
+    "        break\n",
+    "print(f\"Suma final: {S}, con n={n} terminos, y error absoluto: {error_abs}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fed5d80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
