:hammer: Usar ek akgoritmo 3 y aritmetica de redondeo con 3 cifras, determinar la iteracion desde la cual el error relativo esta dentro de 10^-5

--- a/problema03.ipynb
+++ b/problema03.ipynb
@@ -266,12 +266,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8bd3079",
+   "cell_type": "markdown",
+   "id": "108c1888",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Usando el Algoritmo y la aritmética de redondeo con 3 cifras determine la iteracíon desde la cual el error relativo de $\\frac{y_{i-1}}{yi}$ $(i>0)$ con respecto a $\\frac{1+\\sqrt{5}}{2}$  esta dentro de $10^{-5}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4ea9692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " i\t y_(i-1)\t\t\ty_i\t\t ratio y_(i-1)/y_i\t error relativo\n",
+      " 1\t 1.000000\t 1.000000\t 1.000000000\t\t 6.180339887e-01\n",
+      " 2\t 1.000000\t 2.000000\t 0.500000000\t\t 1.909830056e-01\n",
+      " 3\t 2.000000\t 3.000000\t 0.666666667\t\t 7.868932583e-02\n",
+      " 4\t 3.000000\t 5.000000\t 0.600000000\t\t 2.917960675e-02\n",
+      " 5\t 5.000000\t 8.000000\t 0.625000000\t\t 1.127124297e-02\n",
+      " 6\t 8.000000\t 13.000000\t 0.615384615\t\t 4.286776154e-03\n",
+      " 7\t 13.000000\t 21.000000\t 0.619047619\t\t 1.640088274e-03\n",
+      " 8\t 21.000000\t 34.000000\t 0.617647059\t\t 6.260657721e-04\n",
+      " 9\t 34.000000\t 55.000000\t 0.618181818\t\t 2.391930454e-04\n",
+      "10\t 55.000000\t 89.000000\t 0.617977528\t\t 9.135526692e-05\n",
+      "11\t 89.000000\t 144.000000\t 0.618055556\t\t 3.489582459e-05\n",
+      "12\t 144.000000\t 233.000000\t 0.618025751\t\t 1.332884127e-05\n",
+      "13\t 233.000000\t 377.000000\t 0.618037135\t\t 5.091190253e-06\n",
+      "\n",
+      "✅ A partir de la iteración 13, el error relativo ≤ 10⁻⁵.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Función para redondear a un número de cifras significativas\n",
+    "def round_sig(x, sig=3):\n",
+    "    if x == 0:\n",
+    "        return 0.0\n",
+    "    sign = 1 if x > 0 else -1\n",
+    "    x_abs = abs(x)\n",
+    "    exp = math.floor(math.log10(x_abs))\n",
+    "    factor = 10**(sig - 1 - exp)\n",
+    "    return sign * round(x_abs * factor) / factor\n",
+    "\n",
+    "# Número áureo φ y su inverso (1/φ)\n",
+    "phi = (1 + math.sqrt(5)) / 2\n",
+    "inv_phi = 1 / phi\n",
+    "\n",
+    "# Algoritmo tipo Fibonacci con redondeo a 3 cifras significativas\n",
+    "x = 0.0\n",
+    "y = 1.0\n",
+    "\n",
+    "print(\" i\\t y_(i-1)\\t\\t\\ty_i\\t\\t ratio y_(i-1)/y_i\\t error relativo\")\n",
+    "\n",
+    "for i in range(1, 25):  # hasta la iteración 24\n",
+    "    z = round_sig(x + y, 3)  # suma redondeada a 3 cifras significativas\n",
+    "    x = round_sig(y, 3)\n",
+    "    y = round_sig(z, 3)\n",
+    "\n",
+    "    # calculamos la razón (sin redondear la división)\n",
+    "    ratio = x / y\n",
+    "    rel_error = abs((ratio - inv_phi) / inv_phi)\n",
+    "\n",
+    "    print(f\"{i:2d}\\t {x:.6f}\\t {y:.6f}\\t {ratio:.9f}\\t\\t {rel_error:.9e}\")\n",
+    "\n",
+    "    # condición de parada\n",
+    "    if rel_error <= 1e-5:\n",
+    "        print(f\"\\n✅ A partir de la iteración {i}, el error relativo ≤ 10⁻⁵.\")\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
